Wed Apr  6 23:58:29 CEST 2005 (tk)
----------------------------------
  * clamd/scanner.c: fix possible crash when MaxStreamLength < FILEBUFF
		     (patch by "Andrey J. Melnikoff (TEMHOTA)" <temnota*kmv.ru>)

Wed Apr  6 16:11:50 CEST 2005 (tk)
----------------------------------
  * libclamav/readdb.c: initialise refcount in cli_loadmd()

Tue Apr  5 14:27:32 BST 2005 (trog)
-----------------------------------
  * libclamav/vba_extract.c: fix possible crash

Sat Apr  2 22:19:12 BST 2005 (njh)
----------------------------------
  * libclamav/tnef.c:	Handle attachments where the data are before the title
				(bug report and samples thanks to Stefan
				Kaltenbrunner <stefan at kaltenbrunner.cc>

Tue Mar 29 02:50:30 CEST 2005 (tk)
----------------------------------
  * libclamav/filetypes.c: try to detect international text data

Tue Mar 29 02:02:05 CEST 2005 (tk)
----------------------------------
  * libclamav/filetypes.c: detect and ignore ISO 9660/High Sierra CD-ROM data

Mon Mar 28 12:05:17 BST 2005 (njh)
----------------------------------
 * libclamav:	Added fast track visa technology to files that are not mboxs

Sat Mar 26 09:53:34 GMT 2005 (njh)
----------------------------------
  * libclamav/tnef.c:	Now works on PPC architecture

Fri Mar 25 23:21:18 CET 2005 (tk)
---------------------------------
  * clamscan: add --max-dir-recursion

Fri Mar 25 19:48:42 GMT 2005 (njh)
----------------------------------
  * libclamav:	Added TNEF (winmail.dat) decoding. Now finds eicar in test 14
			from http://www.webmail.us/testvirus

Fri Mar 25 18:58:29 CET 2005 (tk)
---------------------------------
  * freshclam: improve new database installation under w32 (thanks to Boguslaw
	       Brandys <bbrandys*clamav.net>)

Fri Mar 25 18:47:34 CET 2005 (tk)
---------------------------------
  * freshclam: fork before system() call in daemon mode (patch by Per Jessen
	       <per*computer.org>)

Tue Mar 22 22:54:46 CET 2005 (tk)
---------------------------------